# phd-thesis

./: README.md  abstract.tex  compile.sh  glossary.tex  lifetimes.rs  loop_fusion.py  main.ist  main.tex  ownership.rs  plan-study.md  plan-thesis.md  plan-upgrade.md  plan.md  references.bib  simple_compilation.sh  thesis.tex  titlepage.tex  todo.md  valid.rs
.ipynb_checkpoints/: Complexity Helmholtz-checkpoint.ipynb  Untitled-checkpoint.ipynb
chapters/appendix/: appendix.tex  fmm.tex  hyksort.tex  laplace_bvp.tex  locals.tex  morton.tex  traits.tex
chapters/ch_1/: ch_1.tex  code.tex  plan.tex  sec_1.tex  sec_1_0.tex  sec_1_1.tex  sec_1_2.tex  sec_1_3.tex
chapters/ch_2/: ch_2.tex  sec_2_0.tex  sec_2_1.tex  sec_2_2.tex  sec_2_3.tex  sec_2_4.tex
chapters/ch_3/: ch_3.tex  plan.tex  sec_3_0.tex  sec_3_1.tex  sec_3_1_0.tex  sec_3_1_1.tex  sec_3_1_2.tex  sec_3_2.tex  sec_3_3.tex
chapters/ch_4/: ch_4.tex  sec_4_0.tex
chapters/ch_5/: ch_5.tex  sec_5_0.tex
chapters/ch_6/: ch_6.tex  sec_6_0.tex
chapters/ch_7/: ch_7.tex  sec_7_0.tex
chapters/conclusion/: conclusion.tex
chapters/designing_software_for_fmm/: designing_software_for_fmm.tex
chapters/distributed_fmm/: distributed_fmm.tex
chapters/experiments/: experiments.tex
chapters/field_translation/: field_translation.tex  m2l.tex
code/ch_2/: data.csv  (+11 more)
pages/: abstract.tex  acknowledgements.tex  acronyms.tex  appendix.tex  cover.tex  glossary.tex  impact.tex  paper_declaration.tex
snippets/: Cargo.toml  concept.cpp  nested_function.py  parallel_multithreading.py  pyclass.py  rusty.py  rusty.rs  trait.rs
(+111 files in other folders)
